добавляет scss-блоки

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,6 @@
-h1 {
-  color: blue;
-}
+@import "variables.scss";
+@import "scaffolding.scss";
+
+@import "blocks/page-header.scss";
+@import "blocks/page-main.scss";
+@import "blocks/page-footer.scss";
