--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "normalize.scss";
 @import "fonts.scss";
+@import "visually-hidden.scss";
 @import "variables.scss";
 @import "scaffolding.scss";
 
