--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,31 +1,31 @@
 @font-face {
   font-family: "Montserrat";
-  src: url("../fonts/montserrat-regular.woff2") format("woff"),
-    url("../fonts/montserrat-regular.woff") format("woff2");
+  src: url("../fonts/montserrat-regular.woff2") format("woff2"),
+    url("../fonts/montserrat-regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../fonts/montserrat-medium.woff2") format("woff"),
-    url("../fonts/montserrat-medium.woff") format("woff2");
+  src: url("../fonts/montserrat-medium.woff2") format("woff2"),
+    url("../fonts/montserrat-medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../fonts/montserrat-semibold.woff2") format("woff"),
-    url("../fonts/montserrat-semibold.woff") format("woff2");
+  src: url("../fonts/montserrat-semibold.woff2") format("woff2"),
+    url("../fonts/montserrat-semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Montserrat";
-  src: url("../fonts/montserrat-bold.woff2") format("woff"),
-    url("../fonts/montserrat-bold.woff") format("woff2");
+  src: url("../fonts/montserrat-bold.woff2") format("woff2"),
+    url("../fonts/montserrat-bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
