--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,5 +5,12 @@
 @import "scaffolding.scss";
 
 @import "blocks/page-header.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/site-list.scss";
+
 @import "blocks/page-main.scss";
+@import "blocks/about-us.scss";
+@import "blocks/description.scss";
+
+
 @import "blocks/page-footer.scss";
