--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -8,13 +8,13 @@
   min-height: 650px;
 }
 
-@media (min-width: 768px) and (max-width: 1023.98px) {
+@media  screen and (max-width: 1023px) {
   .about-us img {
     min-height: 638px;
   }
 }
 
-@media (max-width: 767.98px) {
+@media  screen and (max-width: 767px) {
   .about-us img {
     min-height: 500px;
   }
