--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -9,10 +9,10 @@
   padding-top: 35px;
   padding-bottom: 35px;
   padding-left: 103px;
-  padding-right: 70px;
+  padding-right: 76px;
 }
 
-@media (min-width: 768px) and (max-width: 1023.98px) {
+@media  screen and (max-width: 1023px) {
   .page-header {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -21,21 +21,29 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023.98px) {
+@media  screen and (max-width: 767px) {
+  .page-header {
+    flex-direction: column;
+    padding-top: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+
+@media  screen and (max-width: 1023px) {
   .page-header__logo-image {
     width: 38px;
     height: 20px;
   }
 }
 
-@media (max-width: 846px) {
-  .page-header__logo {
-    padding-top: 11px;
-    padding-bottom: 0;
-  }
-
+@media  screen and (max-width: 767px) {
   .page-header__logo-image {
-    width: 66px;
-    height: auto;
+    position: relative;
+    width: 42px;
+    height: 22px;
+    margin-bottom: 29px;
+    z-index: 20;
   }
 }
