--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,5 +1,44 @@
 .nav__list {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   margin: 0;
+  list-style: none;
+}
+
+@media  screen and (max-width: 767px) {
+  .nav__list {
+    flex-direction: column;
+  }
+}
+
+.navigation-list__link {
+  margin-right: 33px;
+  font-weight: 500;
+  line-height: 20px;
+  color: #F9FBFD;
+  text-decoration: none;
+  transition: .3s linear;
+}
+
+.navigation-list__link:hover {
+  opacity: 0.8;
+}
+
+.navigation-list__link:active {
+  opacity: 0.5;
+}
+
+@media screen and (max-width: 1023px) {
+  .navigation-list__link {
+    margin-right: 23px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .navigation-list__item {
+    margin-bottom: 10px;
+  }
 }
