--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,4 +1,44 @@
 .page-footer {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 103px;
+  padding-right: 103px;
   background-color: #011C40;
+}
+
+@media screen and (max-width: 1023px) {
+  .page-footer {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 45px;
+    padding-right: 45px;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .page-footer {
+    align-items: start;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-left: 15px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
+.page-footer__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+@media  screen and (max-width: 767px) {
+  .page-footer__wrapper {
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
 }
