--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,10 @@
 @import "blocks/page-main.scss";
 @import "blocks/about-us.scss";
 @import "blocks/description.scss";
-
+@import "blocks/features.scss";
+@import "blocks/catalog.scss";
+@import "blocks/booking.scss";
+@import "blocks/contacts.scss";
 
 @import "blocks/page-footer.scss";
 @import "blocks/logo.scss";
