--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,5 +1,5 @@
 .features {
-  min-height: 562px;
+  //min-height: 562px;
   padding-top: 112px;
   padding-bottom: 119px;
 
@@ -40,13 +40,26 @@
   }
 }
 
-
+@media  screen and (max-width: 1023px) {
+  .features {
+    padding-top: 91px;
+    padding-bottom: 100px;
+  }
+}
 
 .features__wrapper {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   padding-right: 103px;
   padding-left: 103px;
+}
+
+@media  screen and (max-width: 1023px) {
+  .features__wrapper {
+    padding-right: 45px;
+    padding-left: 45px;
+  }
 }
 
 .features__heading {
@@ -64,6 +77,12 @@
   color: #011C40;
 }
 
+@media  screen and (max-width: 1023px) {
+  .features__heading h2 {
+    font-size: 26px;
+  }
+}
+
 .features__list {
   display: flex;
   margin: 0;
@@ -71,6 +90,15 @@
 
   list-style: none;
 }
+
+
+@media screen and (min-width: 1367px) {
+  .features__list {
+    //margin: 0 auto;
+    justify-content: space-around;
+  }
+}
+
 
 .list-features__item {
   max-width: 360px;
@@ -80,17 +108,45 @@
   background-color: #F9FBFD;
 }
 
+@media  screen and (max-width: 1023px) {
+  .list-features__item  {
+    padding-right: 10px;
+    padding-left: 19px;
+    padding-bottom: 18px;
+  }
+}
+
 .list-features__item--ship {
   margin-right: 20px;
 }
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ship {
+    margin-right: 15px;
+  }
+}
+
 
 .list-features__item--ticks {
   margin-left: 20px;
   margin-right: 20px;
 }
 
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ticks {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+
 .list-features__item--boat {
   margin-left: 20px;
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--boat {
+    margin-left: 15px;
+  }
 }
 
 .list-features__item--ship .list-features__icon {
@@ -98,16 +154,54 @@
   padding-bottom: 13px;
 }
 
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ship .list-features__icon {
+    padding-top: 25px;
+  }
+}
+
 .list-features__item--ticks .list-features__icon {
   padding-top: 35px;
   padding-bottom: 19px;
 }
 
-.list-features__item--boat .list-features__icon{
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ticks .list-features__icon {
+    padding-top: 29px;
+  }
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ticks .list-features__icon {
+    padding-top: 27px;
+  }
+}
+
+.list-features__item--boat .list-features__icon {
   padding-top: 35px;
   padding-bottom: 23px;
 }
 
+@media  screen and (max-width: 1023px) {
+  .list-features__item--boat .list-features__icon {
+    padding-top: 28px;
+    padding-bottom: 20px;
+  }
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ship svg {
+    height: 26px;
+  }
+
+  .list-features__item--ticks svg {
+    height: 19px;
+  }
+
+  .list-features__item--boat svg {
+    height: 13px;
+  }
+}
 
 .list-features__item h3 {
   margin: 0;
@@ -115,8 +209,14 @@
 
   font-weight: 500;
   font-size: 18px;
-  line-height: 150%;
+  line-height: 27px;
   color: #011C40;
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item h3 {
+    line-height: 140%;
+  }
 }
 
 .list-features__item p {
@@ -124,6 +224,6 @@
 
   font-weight: normal;
   font-size: 14px;
-  line-height: 140%;
+  line-height: 20px;
   color: #011C40;
 }
