добавляет стили к блоку 6

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,5 +1,5 @@
 .features {
-  //min-height: 562px;
+  min-height: 562px;
   padding-top: 112px;
   padding-bottom: 119px;
 
@@ -282,6 +282,6 @@
 
   font-weight: normal;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 140%;
   color: #011C40;
 }
