--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,10 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 4px;
-  padding-bottom: 5px;
+  padding-top: 11px;
+  padding-bottom: 7px;
 
   background-color: #F9FBFD;
+  cursor: pointer;
 }
 
 .button__link {
