--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -4,8 +4,6 @@
   height: 386px;
   line-height: 0;
 
-  // временно
-  opacity: 0;
 }
 
 .card__main-heading h3 {
@@ -18,8 +16,7 @@
   line-height: 22.5px;
   color: #F9FBFD;
 
-  // временно
-  opacity: 0;
+  opacity: 1;
 }
 
 .card__heading h4 {
@@ -46,16 +43,44 @@
   min-height: 386px;
 }
 
+.card__side.card__side--back {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+
 .card__side--back {
-  position: relative;
-  z-index: 10;
   margin-top: -386px;
   padding-top: 72px;
   padding-bottom: 35px;
   padding-left: 25px;
   padding-right: 25px;
 
+  visibility: hidden;
+
   color: #F9FBFD;
   background-color: #011C40;
   box-shadow: 0px 4px 35px rgba(1, 28, 64, 0.15);
+}
+
+.button__wrapper {
+  align-self: flex-end;
+  min-width: 210px;
+}
+
+.card__side--back {
+  position: relative;
+  z-index: 50;
+  visibility: hidden;
+}
+
+.card__side--front {
+
+
+}
+
+.card__side--front:hover+ .card__side--back {
+  visibility: visible;
 }
