--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -2,6 +2,7 @@
   padding-top: 112px;
   padding-left: 103px;
   padding-right: 100px;
+  padding-bottom: 101px;
 
   background-color: #E5E5E5;;
 }
@@ -32,6 +33,6 @@
 .cards__item {
   margin-left: 15px;
   margin-right: 15px;
-  margin-top: 15px;
+  margin-top: 13px;
   margin-bottom: 15px;
 }
