--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -19,6 +19,14 @@
   opacity: 1;
 }
 
+.card__heading span {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+
+  color: #F9FBFD;
+}
+
 .card__heading h4 {
   margin: 0;
   padding-bottom: 2px;
