--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,4 +1,3 @@
-
 .card__img img {
   width: 260px;
   height: 386px;
@@ -11,6 +10,13 @@
     height: 386px;
   }
 }
+
+@media  screen and (max-width: 767px) {
+  .card__img img {
+    width: 270px;
+  }
+}
+
 
 .card__main-heading h3 {
   margin: 0;
@@ -29,6 +35,13 @@
   .card__main-heading h3 {
     margin-top: -57px;
     padding-left: 34px;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .card__main-heading h3 {
+    margin-top: -47px;
+    padding-left: 26px;
   }
 }
 
@@ -73,6 +86,12 @@
   .card__side {
     max-width: 309px;
     min-height: 386px;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .card__side {
+    max-width: 270px;
   }
 }
 
