--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/card.scss";
 @import "blocks/button.scss";
 @import "blocks/booking.scss";
+@import "blocks/form.scss";
 @import "blocks/contacts.scss";
 
 // Подвал
