добавляет десктопную версию 8-го блока

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -103,7 +103,7 @@
   width: 18px;
   height: 18px;
 
-  background-color: #F9FBFD;;
+  background-color: #F9FBFD;
 }
 
 .form__checkbox:checked + label::after {
