--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -13,7 +13,26 @@
 }
 
 .contacts__map {
+  position: relative;
+
   padding-right: 100px;
+}
+
+.contacts__map::before {
+  content: "";
+
+  position: absolute;
+  top: 217px;
+  left: 249px;
+
+  width: 18px;
+  height: 22px;
+
+  background-image: url("../img/icon-map-pin.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: 18px 22px;
+  //background-color: red;
 }
 
 .contacts__map img {
