--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,9 @@
 
 // Шапка
 
+@import "blocks/wrap.scss";
+
+
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
