--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -23,9 +23,9 @@
 @media  screen and (max-width: 767px) {
   .contacts__wrapper {
     //max-width: 295px;
-    justify-content: center;
+    //justify-content: center;
     flex-direction: column;
-    align-items: center;
+    //align-items: center;
 
     padding-top: 65px;
     padding-bottom: 65px;
@@ -59,6 +59,14 @@
   overflow: hidden;
 }
 
+
+@media  screen and (max-width: 767px) {
+  .contacts__map {
+    padding-right: 0;
+  }
+}
+
+
 .contacts__map iframe {
   position: relative;
   z-index: 2;
@@ -70,14 +78,15 @@
 
 @media  screen and (max-width: 1023px) {
   .contacts__map iframe {
-    width: 324px;
+    //width: 324px;
     height: 335px;
   }
 }
 
 @media  screen and (max-width: 767px) {
   .contacts__map iframe {
-    width: 290px;
+    //width: 290px;
+    width: 100%;
     height: 316px;
   }
 }
@@ -114,11 +123,6 @@
   margin: 0;
 }
  */
-@media  screen and (max-width: 1023px) {
-  .contacts__map {
-    padding-right: 30px;
-  }
-}
 
 .contacts__map::before {
   content: "";
