добавляет правки на главный экран

--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -21,6 +21,7 @@
 
 @media  screen and (max-width: 767px) {
   .about-us__wrapper {
+    //min-height: 507px;
     min-height: 507px;
     padding-top: 55px;
     //padding-right: 40px;
