--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 11px;
-  padding-bottom: 7px;
+  //padding-top: 11px;
+  //padding-bottom: 7px;
 
   background-color: #F9FBFD;
   cursor: pointer;
@@ -19,10 +19,13 @@
  */
 
 .button__link {
+  display: flex;
   font-weight: 600;
   font-size: 14px;
   line-height: 150%;
   color: #011C40;
+  padding-top: 11px;
+  padding-bottom: 10px;
 
   text-decoration: none;
 }
