--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -26,7 +26,9 @@
   color: #011C40;
   padding-top: 11px;
   padding-bottom: 10px;
-
+  padding-right: 46px;
+  padding-left: 46px;
+  min-width: 210px;
   text-decoration: none;
 }
 
