--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -9,7 +9,7 @@
 
 @media  screen and (max-width: 1023px) {
   .description {
-    margin-top: -94px;
+    //margin-top: -94px;
     padding-left: 45px;
     padding-right: 45px;
     padding-bottom: 92px;
