--- a/source/sass/blocks/wrap.scss
+++ b/source/sass/blocks/wrap.scss
@@ -1,9 +1,9 @@
 .wrap {
 
-  //background-color: #00437c;
+  background-color: #00437c;
   background-image: url("../img/landscape-1-desktop@1x.jpg");
   background-repeat: no-repeat;
-  background-position: center 0;
+  background-position: center bottom;
   //background-size: 100% 650px;
 
   //background-position: 50% 50%;
@@ -19,7 +19,6 @@
 @media screen and (max-width: 1023px) {
   .wrap {
     background-image: url("../img/landscape-1-tablet@1x.jpg");
-    background-size: cover;
   }
 }
 
@@ -35,7 +34,7 @@
     //background-image: url("../img/landscape-1-mobile@1x.jpg");
     //background-size: cover;
     //background-position: center 0;
-    background-position: -175px -35px;
+    //background-position: -175px -35px;
   }
 }
 
