--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -1,6 +1,5 @@
 .description {
   display: flex;
-  //margin-top: -122px;
   padding-right: 103px;
   padding-left: 103px;
 
@@ -9,7 +8,6 @@
 
 @media  screen and (max-width: 1023px) {
   .description {
-    //margin-top: -94px;
     padding-left: 45px;
     padding-right: 45px;
     padding-bottom: 92px;
@@ -19,7 +17,6 @@
 @media  screen and (max-width: 767px) {
   .description {
     flex-direction: column;
-    margin-top: -115px;
     padding-left: 15px;
     padding-right: 15px;
     padding-bottom: 65px;
@@ -32,7 +29,7 @@
   padding-bottom: 21px;
   font-weight: 600;
   font-size: 28px;
-  line-height: 150%;
+  line-height: 42px;
   color: #011C40;
 }
 
@@ -41,13 +38,14 @@
     padding-bottom: 16px;
 
     font-size: 26px;
-    line-height: 140%;
+    line-height: 36px;
   }
 }
 
 @media  screen and (max-width: 767px) {
   .description h2 {
     font-size: 24px;
+    line-height: 34px;
   }
 }
 
@@ -57,14 +55,14 @@
 
   font-weight: normal;
   font-size: 16px;
-  line-height: 150%;
+  line-height: 24px;
   color: #011C40;
 }
 
 @media  screen and (max-width: 1023px) {
   .description p {
     font-size: 16px;
-    line-height: 150%;
+    line-height: 24px;
   }
 }
 
