--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,6 +1,6 @@
 .card__img img {
-  width: 260px;
-  height: 386px;
+  min-width: 260px;
+  min-height: 386px;
   line-height: 0;
 }
 
@@ -17,7 +17,6 @@
   }
 }
 
-
 .card__main-heading h3 {
   margin: 0;
   margin-top: -52px;
@@ -27,6 +26,9 @@
   font-size: 18px;
   line-height: 22.5px;
   color: #F9FBFD;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 
   opacity: 1;
 }
@@ -95,14 +97,17 @@
   }
 }
 
+.card__side--front {
+
+  background-color: #00437c;
+}
+
 
 .card__side.card__side--back {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-
-
 
 .card__side--back {
   margin-top: -386px;
