добавляет правки (PP, планшет)

--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -51,6 +51,8 @@
   .site-list__link {
     margin-right:11px;
     margin-left: 11px;
+    margin-right:12.5px;
+    margin-left: 12.5px;
 
     font-size: 14px;
     line-height: 17px;
@@ -64,6 +66,7 @@
     padding: 0;
     margin-top: 10.2px;
     margin-bottom: 10.2px;
+
     font-size: 18px;
     line-height: 22px;
     color: #011C40;
