--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -11,8 +11,8 @@
   .catalog {
     padding-top: 91px;
     padding-bottom: 83px;
-    padding-left: 50px;
-    padding-right: 49px;
+    padding-left: 45px;
+    padding-right: 20px;
   }
 }
 
@@ -42,7 +42,9 @@
 
 @media  screen and (max-width: 1023px) {
   .catalog__wrapper-heading {
+    justify-content: flex-start;
     padding-bottom: 35px;
+    padding-left: 200px;
   }
 }
 
@@ -86,7 +88,8 @@
 
 @media  screen and (max-width: 1023px) {
   .catalog__list {
-    justify-content: center;
+    //justify-content: center;
+    justify-content: flex-start;
   }
 }
 
@@ -102,4 +105,11 @@
   margin-right: 15px;
   margin-top: 12px;
   margin-bottom: 12px;
+}
+
+@media  screen and (max-width: 1023px) {
+  .cards__item {
+    margin-top: 14px;
+    margin-bottom: 14px;
+  }
 }
