--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -270,6 +270,7 @@
 @media  screen and (max-width: 1023px) {
   .list-features__item h3 {
     line-height: 25px;
+    padding-bottom: 10px;
   }
 }
 
